--- a/templates/emergente.html
+++ b/templates/emergente.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <div class="container">
-    <button class="btn-role btn-usuario" onclick="window.location.href='/principal'">USUARIO</button>
+    <button class="btn-role btn-usuario" onclick="window.location.href='/registro_usuario'">Usuario</button>
     <button class="btn-role btn-socio" onclick="window.location.href='/verificar_socio'">SOCIO CONDUCTOR</button>
   </div>
 </body>
