--- a/templates/socio.html
+++ b/templates/socio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GAVVIP Socio Conductor</title>
-  <script src="https://openfpcdn.io/fingerprintjs/v4" async onerror="alert('Error al cargar FingerprintJS');"></script>
+  <script src="https://openfpcdn.io/fingerprintjs/v4"></script>
   <style>
     html, body {
       margin: 0;
@@ -124,6 +124,16 @@
 
     window.onload = async () => {
       try {
+        const waitForFingerprint = () =>
+          new Promise((resolve, reject) => {
+            const check = () => {
+              if (window.FingerprintJS) resolve();
+              else setTimeout(check, 100);
+            };
+            check();
+          });
+
+        await waitForFingerprint();
         await validarAcceso();
         initMap();
       } catch (e) {
